kubernetes/apps/network/gateway/app/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.lab.fobiat.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-lab-fobiat-dev-tls
      allowedRoutes:
        namespaces:
          from: All
